Version: $Id$ $Name$

purple (09/16/05)
-------------------
+ Updated version to 5.1.0.0
+ Found GM flag in spawnStruct
+ Implemented PvP map option for current Zek rules (+/-4 are triangles,
	flashing circle is blue for lower level, white for same level, yellow
	for higher level. All spawns outside +/-4 are normal. Pets are circled
	according to their owners)

purple (09/13/05)
-------------------
+ Updated version to 5.1.0.0-pre1
+ Branched 4.x off the trunk to v4 branch
+ Merged pre_5_0_beta branch down to the trunk. The trunk will be used for
	development now
+ Updated zones to reflect new .exe
+ Reworked spawnStruct
+ Reworked some of charProfileStruct
+ Regenerated staticspells.h

purple (07/22/05)
-------------------
+ Updated version to 5.0.0.25
+ Merged in my old alpha netlayer patch which helps with double boxing by
	enforcing port matches in code for when the pcap filter isn't
	locked down fast enough because of multithreading
+ Fixed template constructor in Point3DArray to comply with gcc4 (thanks Basic)
+ Removed the redundant and broken Save Zone Filters from the Filters menu
	since it was both redundant and broken
+ Fixed a major bug in the netlayer which caused sequenced packets that are
	seen twice to invalidate themselves in the cache and cause garbage
+ Couple new races hand-entered
+ Cleanup memory leak in group manager

purple (07/07/05)
--------------------
+ Updated version to 5.0.0.24
+ Fixed light member of spawnStruct (thanks BlueAdept)
+ Updated qt required version to 3.2 because I used QString.replace that
	was added there
+ Rewrote the # stripping stuff from filters so you can still search on #
+ Filled in auto consents into charProfileStruct
+ Filled in a little more of spawnStruct
+ Added a couple new weapons that show when worn (from uRit1u2CBBA=)


purple (07/02/05)
---------------------
+ Updated version to 5.0.0.23
+ Strip the # off names before matching to filters to aid in filter writing